# dico-handling

./: .gitignore  .gitmodules  ling.cabal  shell.nix
fcg/: connected-goal-test.lisp  grammar.lisp  unknown-word.lisp
interface/: CMakeLists.txt  default.nix
interface/src/: app.cpp  app.hpp  feData.cpp  feData.hpp  frameModel.cpp  frameModel.hpp  frameScene.cpp  frameScene.hpp  framedico.cpp  framedico.hpp  framegraph.cpp  framegraph.hpp  frames.cpp  frames.hpp  main.cpp  server.cpp  server.hpp  sexpr.cpp  sexpr.hpp  treeSequence.cpp  treeSequence.hpp  utils.cpp  utils.hpp  xmlView.cpp  xmlView.hpp
interface/temp-src/: Makefile  framegraph.hpp  main.cpp  sexpr.cpp  sexpr.hpp
logic/: Makefile  binding-ex.dot  binding-ex.tex  default.nix  logic.tex
src/: DicoFrames.hs  DicoXml.hs  Drawing.hs  FCG.hs  FrameJSON.hs  FrameNet.hs  GrammarGeneration.hs  Main.hs
