
name:                ling
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

executable ling
  main-is:             Main.hs
  other-module:        DicoXml
  hs-source-dirs:      src/
  build-depends:       base >= 4.9 && < 4.10
                     , array, containers, transformers, directory
                     , diagrams, diagrams-contrib, diagrams-core
                     , diagrams-lib, diagrams-solve, diagrams-svg
                     , diagrams-cairo, diagrams-graphviz, hxt, text
                     , graphviz, fgl, linear, dynamic-plot
  ghc-options:         -Wall
  default-language:    Haskell2010

