
name:                ling
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

executable ling
  main-is:             Main.hs
  other-modules:       DicoXml
                     , DicoFrames
                     , FCG
                     , FrameNet
                     , GrammarGeneration
                     , FrameJSON
  hs-source-dirs:      src/
  build-depends:       base >= 4.10 && < 4.11
                     , array, containers, transformers, directory, hxt, text
                     , graphviz, fgl, linear, mtl, json, pretty
  ghc-options:         -Wall
  default-language:    Haskell2010

